# Planetarium

./: .gitignore  CMakeLists.txt  run.sh
include/: buffer.hpp  config.hpp  io.hpp  program.hpp  shader.hpp  texture.hpp  varray.hpp
lib/: buffer.cpp  config.cpp  glad.c  io.cpp  program.cpp  shader.cpp
lib/glad/: glad.c
lib/glad/include/glad/: glad.h
shaders/: shader.fs  shader.vs
src/: buffer.cpp  main.cpp  program.cpp  shader.cpp  texture.cpp  varray.cpp
